--- a/Resipes/fat-cake.html
+++ b/Resipes/fat-cake.html
@@ -7,6 +7,54 @@
     <title>Fat Cake Recipe</title>
 </head>
 <body>
-    <h1>Fat Cakes</h1>
+    <!--start description section-->
+    <header class="description">
+        <h1>Fat Cakes</h1>
+        <p>Famously known as <em>amagwinya</em>, a delightful kasi snack commonly enjoyed with cheese, polony, mince etc..</p>
+    </header>
+    <!--end description section-->
+
+    <!--start ingredients section-->
+    <section>
+        <h2>What you'll need:</h2>
+        <ul>
+            <li>7 cups of all purpose flour</li>
+            <li>Half a cup of sugar</li>
+            <li>10g of yeast (1 sachet = 10g)</li>
+            <li>1 tsp of salt</li>
+            <li>2 and half cups of warm water</li>
+            <li>Oil</li>
+        </ul>
+    </section>
+    <!--end ingredients section-->
+
+    <!--start preparation section-->
+    <section>
+        <h2>Preparation</h2>
+        <ol>
+            <li>Place all your dry ingredients (flour, sugar, yeast and salt.) in your mixing bowl and mix together well.</li>
+            <li>Add water and 2 tablespoon of oil and mix well. You may use a mixer but if you do not have one you can use your hands. After mixing your dough should be sticky.</li>
+            <li>Cover your dough with a cloth and let it rise for 45 minutes. (place in direct sunlight for best results)</li>
+            <li>Your dough should be twice the size. Knead your dough one more time and let it rest for another 15 minutes.</li>
+        </ol>
+    </section>
+    <!--end preperation section-->
+
+    <!--start cooking section-->
+    <section>
+        <h2>Let's get cooking!</h2>
+        <ol>
+            <li>Heat up your oil at a medium temperature. Make sure you put enough oil for deep frying</li>
+            <li>Separate your dough into balls (or any shape you desire) and fry until golden brown (approximately 10 minutes).</li>
+            <li>Serve and enjoy 😋</li>
+        </ol>
+    </section>
+    <!--end cooking section-->
+
+    <!--start footer-->
+    <footer>
+
+    </footer>
+    <!--end footer-->
 </body>
 </html>
