--- a/Resipes/fat-cake.html
+++ b/Resipes/fat-cake.html
@@ -53,7 +53,7 @@
 
     <!--start footer-->
     <footer>
-
+        <p>credits: <a href="https://mzansirecipes.co.za/recipes/amagwinya-vetkoek-recipe/" target="_blank">Mzansi Recipes</a></p>
     </footer>
     <!--end footer-->
 </body>
