--- a/index.html
+++ b/index.html
@@ -10,21 +10,21 @@
     <h1>Kasi Recipes</h1>
     <p>Quick and simple recipes to try at home!</p>
     <div>
-        <a href="Resipes/fat-cake.html" target="_blank">
+        <a href="Resipes/fat-cake.html">
             <img src="images/Fat Cakes.jpg">
             <p>Fat Cakes</p>
         </a>
     </div>
 
     <div>
-        <a href="Resipes/cream-spinach.html" target="_blank">
+        <a href="Resipes/cream-spinach.html">
             <img src="images/Creamed Spinach.png">
             <p>Cream Spinach</p>
         </a>
     </div>
 
     <div>
-        <a href="Resipes/scones.html" target="_blank">
+        <a href="Resipes/scones.html">
             <img src="images/Scones.jpg">
             <p>Scones</p>
         </a>
