--- a/index.html
+++ b/index.html
@@ -1,33 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kasi Recipes</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Kasi Recipes</title>
+  <link rel="stylesheet" href="Apps/index.css">
 </head>
 <body>
-    <h1>Kasi Recipes</h1>
-    <p>Quick and simple recipes to try at home!</p>
-    <div>
+  <h1>Kasi Recipes</h1>
+  <p>Quick and simple recipes to try at home!</p>
+    <div class="container">
+      <div class="tile">
         <a href="Resipes/fat-cake.html">
-            <img src="images/Fat Cakes.jpg">
-            <p>Fat Cakes</p>
+          <img src="images/Fat Cakes.jpg">
+          <p>Fat Cakes</p>
         </a>
-    </div>
+      </div>
 
-    <div>
+      <div class="tile">
         <a href="Resipes/cream-spinach.html">
-            <img src="images/Creamed Spinach.png">
-            <p>Cream Spinach</p>
+          <img src="images/Creamed Spinach.png" height="300">
+          <p>Cream Spinach</p>
         </a>
-    </div>
+      </div>
 
-    <div>
+      <div class="tile">
         <a href="Resipes/scones.html">
-            <img src="images/Scones.jpg">
-            <p>Scones</p>
+          <img src="images/Scones.jpg" height="300">
+          <p>Scones</p>
         </a>
+      </div>
     </div>
 </body>
 </html>
