--- a/index.html
+++ b/index.html
@@ -5,28 +5,28 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Kasi Recipes</title>
-  <link rel="stylesheet" href="Apps/index.css">
+  <link rel="stylesheet" href="style/css/index.css">
 </head>
 <body>
   <h1>Kasi Recipes</h1>
   <p>Quick and simple recipes to try at home!</p>
     <div class="container">
       <div class="tile">
-        <a href="Resipes/fat-cake.html">
+        <a href="resipes/fat-cake.html">
           <img src="images/Fat Cakes.jpg">
           <p>Fat Cakes</p>
         </a>
       </div>
 
       <div class="tile">
-        <a href="Resipes/cream-spinach.html">
+        <a href="resipes/cream-spinach.html">
           <img src="images/Creamed Spinach.png" height="300">
           <p>Cream Spinach</p>
         </a>
       </div>
 
       <div class="tile">
-        <a href="Resipes/scones.html">
+        <a href="resipes/scones.html">
           <img src="images/Scones.jpg" height="300">
           <p>Scones</p>
         </a>
